feat: add a categoria novidades

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -323,7 +323,8 @@
         "destaques": "Highlights",
         "virtuais": "Virtuals",
         "aoVivo": "Live Casino",
-        "bingo": "Bingo"
+        "bingo": "Bingo",
+        "news": "News"
     },
     "cartoes": {
         "titulo": "Cards",
