--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -324,7 +324,8 @@
         "destaques": "Destaques",
         "virtuais": "Virtuais",
         "aoVivo": "Ao Vivo",
-        "bingo": "Bingo"
+        "bingo": "Bingo",
+        "news": "Novidades"
     },
     "cartoes": {
         "titulo": "Cartões",
