fix: ajustes de layout - solicitado pelos QA`s

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -283,8 +283,8 @@
         "mesa": "Table",
         "cassinoAoVivo": "Live Casino",
         "loteriaPopular": "Popular Lottery",
-        "maisPopulares": "Populares",
-        "news": "Novidades"
+        "maisPopulares": "Popular",
+        "news": "News"
     },
     "bilhete": {
         "titulo": "TICKET",
