--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -231,7 +231,8 @@
         "pesquisasRecentes": "Pesquisas recentes",
         "limparHistorico": "Limpar histórico",
         "nenhumResultadoEncontrado": "Nenhum resultado encontrado para esta pesquisa",
-        "jogosEmAlta": "Jogos em alta"
+        "jogosEmAlta": "Jogos em alta",
+        "nenhumJogoDisponivel": "Nenhum jogo disponível no momento"
     },
     "bet": {
         "sportsBetting": "Apostas esportivas",
