--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -377,7 +377,8 @@
         "dailyMaximum": "Daily maximum",
         "monthlyMaximum": "Monthly maximum",
         "identityVerify": "Verify identity",
-        "identityVerifyNeeded": "To proceed with the withdrawal, it will be necessary to perform identity verification beforehand."
+        "identityVerifyNeeded": "To proceed with the withdrawal, it will be necessary to perform identity verification beforehand.",
+        "disapprovedIdentity": "Your identity verification has failed. For a manual review, please contact support."
     },
     "ativacaoEmail": {
         "ativacaoDeCadastro": "Registration Activation",
