--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -25,8 +25,8 @@
         "financeiro": "Financeiro",
         "validacao": "Validação",
         "apuracao": "Apuração",
-        "aposta": "Aposta",
-        "apostas": "Apostas",
+        "aposta": "Sorteio",
+        "apostas": "Sorteios",
         "tabela": "Tabela",
         "ajuda": "Ajuda",
         "sair": "Sair",
@@ -267,6 +267,7 @@
         "cotacao": "Cotação",
         "aceitarAlteracoesDeOdds": "Aceitar alterações de odds",
         "apostar": "Apostar",
+        "comprar": "Comprar",
         "utilizarBonus": "Utilizar bônus",
         "algumasCotacoesMudaram": "Algumas cotações mudaram, verifique com atenção antes de confirmar a aposta",
         "algumasCotacoesMudaramPreAposta": "Algumas cotações mudaram desde que foi criada a pré-aposta, verifique com atenção antes realizar a validação.",
