WIP - cópia de aposta loteria

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -103,6 +103,7 @@
         "selecionarTodos": "Select all",
         "selecionarTodosDe": "Select all from",
         "validarAposta": "Validate Bet",
+        "copiarAposta": "Copy Bet",
         "codigoAposta": "Bet Code",
         "codigoPreAposta": "Pre-bet Code",
         "totalDeJogos": "Total games",
