--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -103,6 +103,7 @@
         "selecionarTodos": "Selecionar todos",
         "selecionarTodosDe": "Selecionar todos de",
         "validarAposta": "Validar Aposta",
+        "copiarAposta": "Copiar Aposta",
         "codigoAposta": "Código Aposta",
         "codigoPreAposta": "Código Pré-aposta",
         "totalDeJogos": "Total de jogos",
