--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -103,7 +103,8 @@
         "selecionarTodos": "Selecionar todos",
         "selecionarTodosDe": "Selecionar todos de",
         "validarAposta": "Validar Aposta",
-        "copiarApostaLoteria": "Copiar Loteria",
+        "replicarApostaLoteria": "Replicar Aposta de Loteria",
+        "replicarAposta": "Replicar",
         "codigoAposta": "Código Aposta",
         "codigoPreAposta": "Código Pré-aposta",
         "totalDeJogos": "Total de jogos",
