--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -103,7 +103,8 @@
         "selecionarTodos": "Select all",
         "selecionarTodosDe": "Select all from",
         "validarAposta": "Validate Bet",
-        "copiarApostaLoteria": "Copy Bet Lottery",
+        "replicarApostaLoteria": "Replicate Bet Lottery",
+        "replicarAposta": "Replicate Bet",
         "codigoAposta": "Bet Code",
         "codigoPreAposta": "Pre-bet Code",
         "totalDeJogos": "Total games",
