--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -242,7 +242,8 @@
         "nenhumResultadoEncontrado": "Nenhum resultado encontrado para esta pesquisa",
         "jogosEmAlta": "Jogos em alta",
         "nenhumJogoDisponivel": "Nenhum jogo disponível no momento",
-        "loginGoogle" : "Realize o login com a conta do google"
+        "loginGoogle" : "Realize o login com a conta do google",
+        "computadoEm": "Computado em:"
     },
     "bet": {
         "sportsBetting": "Apostas esportivas",
