--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -104,7 +104,7 @@
         "selecionarTodosDe": "Selecionar todos de",
         "validarAposta": "Validar Aposta",
         "replicarApostaLoteria": "Replicar Aposta de Loteria",
-        "replicarAposta": "Replicar",
+        "replicarAposta": "Replicar Aposta",
         "codigoAposta": "Código Aposta",
         "codigoPreAposta": "Código Pré-aposta",
         "totalDeJogos": "Total de jogos",
