Ajuste Rifa  * correção menu superior

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -277,7 +277,8 @@
         "desafio": "CHALLENGE",
         "acumuladao": "ACCUMULATED",
         "loteria": "LOTERY",
-        "promocao": "PROMOTIONS"
+        "promocao": "PROMOTIONS",
+        "rifas": "RIFAS"
     },
     "submenu": {
         "copa22": "Cup 2022",
