--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -273,7 +273,8 @@
         "desafio": "DESAFÍO",
         "acumuladao": "ACUMULADO",
         "loteria": "LOTERÍA",
-        "promocao": "PROMOCIONES"
+        "promocao": "PROMOCIONES",
+        "rifas": "RIFAS"
     },
     "submenu": {
         "copa22": "Copa 2022",
