--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -1,7 +1,7 @@
 {
     "geral": {
         "processando": "Procesando",
-        "entrar": "Iniciar sesión",
+        "entrar": "Introduzca",
         "registreSe": "Registrarse",
         "entrarNaConta": "Iniciar sesión en tu cuenta",
         "jogar": "Jugar",
@@ -597,21 +597,21 @@
     "jogo_responsavel": {
         "limite_apostas": {
             "titulo": "Límite de apuestas",
-            "descripcion": "La configuración del límite de apuestas es una función que le permite establecer un valor máximo para sus apuestas. Esta configuración ayuda a controlar y limitar el monto que se puede apostar, evitando gastos excesivos y comportamientos irresponsables de juego. Se pueden configurar límites diarios, semanales y mensuales para las apuestas.",
+            "descricao": "La configuración del límite de apuestas es una función que le permite establecer un valor máximo para sus apuestas. Esta configuración ayuda a controlar y limitar el monto que se puede apostar, evitando gastos excesivos y comportamientos irresponsables de juego. Se pueden configurar límites diarios, semanales y mensuales para las apuestas.",
             "definir_limite_diario": "Establecer límite diario de apuestas",
             "definir_limite_semanal": "Establecer límite semanal de apuestas",
             "definir_limite_mensal": "Establecer límite mensual de apuestas"
         },
         "limite_depositos": {
             "titulo": "Límite de depósitos",
-            "descripcion": "La configuración del límite de depósito es una función que le permite establecer un valor máximo para los depósitos que se pueden realizar en su cuenta. Esta configuración tiene como objetivo ayudar a controlar el monto de dinero invertido, evitando gastos excesivos y promoviendo un juego responsable. El límite de depósito establecido evita que deposite cantidades por encima de este límite durante un cierto período de tiempo (diario, semanal y mensual).",
+            "descricao": "La configuración del límite de depósito es una función que le permite establecer un valor máximo para los depósitos que se pueden realizar en su cuenta. Esta configuración tiene como objetivo ayudar a controlar el monto de dinero invertido, evitando gastos excesivos y promoviendo un juego responsable. El límite de depósito establecido evita que deposite cantidades por encima de este límite durante un cierto período de tiempo (diario, semanal y mensual).",
             "definir_limite_diario": "Establecer límite diario de depósito",
             "definir_limite_semanal": "Establecer límite semanal de depósito",
             "definir_limite_mensal": "Establecer límite mensual de depósito"
         },
         "periodo_pausa": {
             "titulo": "Período de pausa",
-            "descripcion": "La función de período de pausa de la cuenta le permite suspender temporalmente el uso de su cuenta en la plataforma. Durante este período, la cuenta se vuelve inactiva, impidiendo el acceso y la realización de actividades como apuestas, retiros y depósitos. Esta opción es útil para tomar un descanso temporal, sin eliminar permanentemente la cuenta, preservando los datos y configuraciones para una reactivación posterior.",
+            "descricao": "La función de período de pausa de la cuenta le permite suspender temporalmente el uso de su cuenta en la plataforma. Durante este período, la cuenta se vuelve inactiva, impidiendo el acceso y la realización de actividades como apuestas, retiros y depósitos. Esta opción es útil para tomar un descanso temporal, sin eliminar permanentemente la cuenta, preservando los datos y configuraciones para una reactivación posterior.",
             "definir_periodo_pausa": "Establecer período de pausa",
             "6horas": "6 horas",
             "12horas": "12 horas",
@@ -624,8 +624,8 @@
         },
         "exclusao_conta": {
             "titulo": "Exclusión de cuenta",
-            "descripcion": "Eliminar permanentemente la cuenta es una acción que resulta en la eliminación completa de la cuenta y toda la información asociada a ella, de forma irreversible. Esto incluye datos personales, historial de apuestas y acceso a la plataforma. Al eliminar permanentemente la cuenta, terminará su participación en el sitio de forma definitiva, sin posibilidad de recuperar la cuenta o su información en el futuro.",
-            "descripcion_2": "Además, enfatizamos que esta acción también implicará la imposibilidad de crear una nueva cuenta en la plataforma.",
+            "descricao": "Eliminar permanentemente la cuenta es una acción que resulta en la eliminación completa de la cuenta y toda la información asociada a ella, de forma irreversible. Esto incluye datos personales, historial de apuestas y acceso a la plataforma. Al eliminar permanentemente la cuenta, terminará su participación en el sitio de forma definitiva, sin posibilidad de recuperar la cuenta o su información en el futuro.",
+            "descricao_2": "Además, enfatizamos que esta acción también implicará la imposibilidad de crear una nueva cuenta en la plataforma.",
             "informe_motivo": "Informe por qué desea eliminar permanentemente su cuenta:",
             "motivo_1": "Se creó una segunda cuenta",
             "motivo_2": "Toma demasiado tiempo/atención",
@@ -639,7 +639,7 @@
         },
         "temporizador_sessao": {
             "titulo": "Temporizador de sesión",
-            "descripcion": "El temporizador de sesión es una configuración que le permite establecer un límite de tiempo para el uso de la plataforma. Ayuda a controlar el tiempo empleado, alertándole cuando se alcanza el límite y finalizando automáticamente su sesión, promoviendo un uso equilibrado y consciente. Por ejemplo, puede optar por limitar sus sesiones a 30 minutos, 1 hora o cualquier otro intervalo adecuado para usted, y también desactivar esta función según lo desee. Cuando se alcanza el límite de tiempo de la sesión, nuestro sistema finalizará automáticamente su sesión y cerrará la sesión de su cuenta. Esto ayuda a garantizar que respete sus límites de tiempo predefinidos.",
+            "descricao": "El temporizador de sesión es una configuración que le permite establecer un límite de tiempo para el uso de la plataforma. Ayuda a controlar el tiempo empleado, alertándole cuando se alcanza el límite y finalizando automáticamente su sesión, promoviendo un uso equilibrado y consciente. Por ejemplo, puede optar por limitar sus sesiones a 30 minutos, 1 hora o cualquier otro intervalo adecuado para usted, y también desactivar esta función según lo desee. Cuando se alcanza el límite de tiempo de la sesión, nuestro sistema finalizará automáticamente su sesión y cerrará la sesión de su cuenta. Esto ayuda a garantizar que respete sus límites de tiempo predefinidos.",
             "definir_tempo": "Establecer tiempo de sesión",
             "desativado": "Desactivado"
         }
