campo de confirmar email no cadastro

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -133,6 +133,7 @@
         "informacoesDeContato": "Contact Info",
         "telefone": "Phone",
         "email": "Email",
+        "confirmarEmail": "Confirmar E-mail",
         "endereco": "Address",
         "cep": "Zipcode",
         "logradouro": "Street",
