--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -130,6 +130,7 @@
         "informacoesDeContato": "Información de contacto",
         "telefone": "Teléfono",
         "email": "Correo electrónico",
+        "confirmarEmail": "Confirmar Correo electrónico",
         "endereco": "Dirección",
         "cep": "Código postal",
         "logradouro": "Calle",
