--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -133,6 +133,7 @@
         "informacoesDeContato": "Informações de Contato",
         "telefone": "Telefone",
         "email": "E-mail",
+        "confirmarEmail": "Confirmar E-mail",
         "endereco": "Endereço",
         "cep": "CEP",
         "logradouro": "Logradouro",
