confirmar email e termos de uso

--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -155,7 +155,7 @@
         "feminino": "Feminino",
         "codigoDeAfiliacao": "Código de afiliação(Opcional)",
         "certificoQueTenhoMais": "Certifico que tenho mais de 18 anos de idade e declaro que li e concordo com os",
-        "deAcordoComOsTermos1": "Ao cadastra-se você estará de acordo com os nossos",
+        "deAcordoComOsTermos1": "Ao cadastrar-se você estará de acordo com os nossos",
         "deAcordoComOsTermos2": "e nossa",
         "termosDeUso": "termos de uso",
         "cadastrar": "Cadastrar",
