Melhoria no texto do placeholder de logradouro

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -137,7 +137,7 @@
         "endereco": "Address",
         "cep": "Zipcode",
         "logradouro": "Street",
-        "exLogradouro": "Street, Avenue, Alley, Boulevard, Square, and so on.",
+        "exLogradouro": "Street, Avenue, Alley, and so on.",
         "bairro": "Neighborhood",
         "estado": "State",
         "cidade": "City",
