--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -134,7 +134,7 @@
         "endereco": "Dirección",
         "cep": "Código postal",
         "logradouro": "Calle",
-        "exLogradouro": "Calle, Avenida, Callejón, Alameda, Plaza, y etcétera.",
+        "exLogradouro": "Calle, Avenida, Callejón, y etcétera.",
         "bairro": "Barrio",
         "estado": "Estado",
         "cidade": "Ciudad",
