feat: Adição do link da política de privacidade na mensagem do cookie.

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -210,7 +210,8 @@
         "cadastroMenorDeIdade": "Registration only permitted for people over 18 years of age.",
         "cadastro": "Registration",
         "tituloInformativoCookies": "Use of Cookies and Sessions",
-        "informativoCookies": "This website uses cookies and sessions to enhance your experience. Cookies are small text files stored on your device that help us keep you authenticated, customize features and settings, as well as improve website functionality. By continuing to use this website, you agree to the use of cookies and sessions in accordance with our Privacy Policy.",
+        "informativoCookies": "This website uses cookies and sessions to enhance your experience. Cookies are small text files stored on your device that help us keep you authenticated, customize features and settings, as well as improve website functionality. By continuing to use this website, you agree to the use of cookies and sessions in accordance with our ",
+        "informativoCookiesLink": "Privacy Policy.",
         "alertaChavePixCpf": "When requesting the withdrawal, it will be processed through the Pix key associated with your CPF (Brazilian Tax ID). Ensure that your CPF is filled in correctly.",
         "esportivo": "sporty",
         "rodadaGratis": "Free Spin",
