--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -207,7 +207,8 @@
         "cadastroMenorDeIdade": "Registro solo permitido para mayores de 18 años.",
         "cadastro": "Registro",
         "tituloInformativoCookies": "Uso de Cookies y Sesiones",
-        "informativoCookies": "Este sitio utiliza cookies y sesiones para mejorar su experiencia. Las cookies son pequeños archivos de texto almacenados en su dispositivo que nos ayudan a mantenerlo autenticado, personalizar funciones y configuraciones, así como mejorar la funcionalidad del sitio. Al continuar utilizando este sitio, usted acepta el uso de cookies y sesiones de acuerdo con nuestra Política de Privacidad.",
+        "informativoCookies": "Este sitio utiliza cookies y sesiones para mejorar su experiencia. Las cookies son pequeños archivos de texto almacenados en su dispositivo que nos ayudan a mantenerlo autenticado, personalizar funciones y configuraciones, así como mejorar la funcionalidad del sitio. Al continuar utilizando este sitio, usted acepta el uso de cookies y sesiones de acuerdo con nuestra ",
+        "informativoCookiesLink": "Política de Privacidad.",
         "alertaChavePixCpf": "Al solicitar el retiro, será procesado a través de la clave Pix asociada a su CPF. Asegúrese de que su CPF esté ingresado correctamente.",
         "esportivo": "deportivo",
         "rodadaGratis": "Tirada gratis",
