--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -210,7 +210,8 @@
         "cadastroMenorDeIdade": "Cadastro permitido apenas para maiores de 18 anos.",
         "cadastro": "Cadastro",
         "tituloInformativoCookies": "Utilização de Cookies e Sessões",
-        "informativoCookies": "Este site utiliza cookies e sessões para aprimorar a sua experiência. Os cookies são pequenos arquivos de texto armazenados no seu dispositivo que nos ajudam a manter você autenticado, personalizar recursos e configurações, bem como melhorar a funcionalidade do site. Ao continuar a usar este site, você concorda com o uso de cookies e sessões de acordo com a nossa Política de Privacidade.",
+        "informativoCookies": "Este site utiliza cookies e sessões para aprimorar a sua experiência. Os cookies são pequenos arquivos de texto armazenados no seu dispositivo que nos ajudam a manter você autenticado, personalizar recursos e configurações, bem como melhorar a funcionalidade do site. Ao continuar a usar este site, você concorda com o uso de cookies e sessões de acordo com a nossa ",
+        "informativoCookiesLink": "Política de Privacidade.",
         "alertaChavePixCpf": "Ao solicitar o saque, ele será processado através da chave Pix associada ao seu CPF. Certifique-se de que o seu CPF esteja preenchido corretamente.",
         "esportivo": "esportivo",
         "rifa": "Rifa",
@@ -597,7 +598,7 @@
         "selecione_uma_opcao": "Selecione uma opção"
     },
     "botoes": {
-        "aceitar": "Aceitar",
+        "aceitar": "Entendi",
         "salvar_alteracoes": "Salvar Alterações",
         "voltar": "Voltar"
     },
