fix: Correção no botão aceitar.

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -597,6 +597,7 @@
     },
     "botoes": {
         "aceitar": "Accept",
+        "entendi": "Got it",
         "salvar_alteracoes": "Save Changes",
         "voltar": "Back"
     },
