--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -589,6 +589,7 @@
     },
     "botoes": {
         "aceitar": "Aceptar",
+        "entendi": "Lo tengo",
         "salvar_alteracoes": "Guardar Cambios",
         "voltar": "Volver"
     },
