ajustando os filtro e a view de rodada gratis deixando mais dinamico

--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -215,12 +215,10 @@
         "alertaChavePixCpf": "Ao solicitar o saque, ele será processado através da chave Pix associada ao seu CPF. Certifique-se de que o seu CPF esteja preenchido corretamente.",
         "esportivo": "esportivo",
         "rifa": "Rifa",
-        "rodadaGratis": "Rodada grátis",
         "dataVencimento": "Data de vencimento",
         "quantidade": "Quantidade",
         "quantidadeUtilizada": "Qtd. Utilizada",
         "jogarAgora": "Jogar Agora",
-        "nenhumaRodadaGratis": "Nenhuma rodada grátis encontrada.",
         "opcaoPromocao": "Selecione uma das opções para visualizar as promoções ativas.",
         "resultadosEncontradosComQuantidade": "Foram encontrados {{quantidade}} resultados",
         "selecioneChavePix": "Selecione a chave pix",
@@ -251,8 +249,7 @@
         "computadoEm": "Computado em:",
         "alteracoesSucesso": "Alterações realizadas com sucesso!",
         "erroInesperado": "Algo inesperado aconteceu. Tente novamente mais tarde.",
-        "enderecoNaoEncontrado": "Endereço não encontrado, por favor preencha manualmente.",
-        "resgatarPremio": "Resgatar Prêmio"
+        "enderecoNaoEncontrado": "Endereço não encontrado, por favor preencha manualmente."
     },
     "bet": {
         "sportsBetting": "Apostas esportivas",
@@ -657,5 +654,15 @@
             "definir_tempo": "Definir tempo de sessão",
             "desativado": "Desativado"
         }
+    },
+    "rodada_gratis":{
+        "resgatarPremio": "Resgatar Prêmio",
+        "rodadaGratis": "Rodada Grátis",
+        "nenhumaRodadaGratis": "Nenhuma rodada grátis encontrada.",
+        "todas": "Todas",
+        "ativa": "Ativa",
+        "expirada": "Expirada",
+        "concluida":"Concluída",
+        "cancelada":"Cancelada"
     }
 }
