tela de carteira

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -23,6 +23,7 @@
         "solicitarSaque": "Request Withdrawal",
         "dashboard": "Dashboard",
         "financeiro": "Financial",
+        "carteira": "Wallet",
         "validacao": "Validation",
         "apuracao": "Assessment",
         "aposta": "Bet",
