--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -23,6 +23,7 @@
         "solicitarSaque": "Solicitar retiro",
         "dashboard": "Tablero",
         "financeiro": "Financiero",
+        "carteira": "Cartera",
         "validacao": "Validación",
         "apuracao": "Evaluación",
         "aposta": "Apuesta",
