--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -23,6 +23,7 @@
         "solicitarSaque": "Solicitar Saque",
         "dashboard": "Dashboard",
         "financeiro": "Financeiro",
+        "carteira": "Carteira",
         "validacao": "Validação",
         "apuracao": "Apuração",
         "aposta": "Aposta",
