--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -247,7 +247,9 @@
         "computadoEm": "Computed in:",
         "alteracoesSucesso": "Changes made successfully!",
         "erroInesperado": "Something unexpected happened. Please try again later.",
-        "enderecoNaoEncontrado": "Address not found, please fill it in manually."
+        "enderecoNaoEncontrado": "Address not found, please fill it in manually.",
+        "bonusCancelado": "Bonus canceled",
+        "aguardando": "Pending"
     },
     "bet": {
         "sportsBetting": "Sports betting",
