--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -243,7 +243,9 @@
         "computadoEm": "Calculado en:",
         "alteracoesSucesso": "¡Cambios realizados con éxito!",
         "erroInesperado": "Algo inesperado ocurrió. Inténtalo de nuevo más tarde.",
-        "enderecoNaoEncontrado": "Dirección no encontrada, por favor complétala manualmente."
+        "enderecoNaoEncontrado": "Dirección no encontrada, por favor complétala manualmente.",
+        "bonusCancelado": "Bono cancelado",
+        "aguardando": "Pendiente"
     },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
