Hotfix: Botao de resgate de bonus da rodada gratis nao aparecendo no mobile

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -663,6 +663,7 @@
         "ativa": "Active",
         "expirada": "Expired",
         "concluida":"Completed",
-        "cancelada":"Canceled"
+        "cancelada":"Canceled",
+        "premio": "Prize"
     }
 }
