--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -655,6 +655,7 @@
         "ativa": "Activo",
         "expirada": "Venció",
         "concluida":"Terminado",
-        "cancelada":"Cancelado"
+        "cancelada":"Cancelado",
+        "premio": "Premio"
     }
 }
