--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -665,6 +665,7 @@
         "ativa": "Ativa",
         "expirada": "Expirada",
         "concluida":"Concluída",
-        "cancelada":"Cancelada"
+        "cancelada":"Cancelada",
+        "premio": "Prêmio"
     }
 }
