refactor(casino): fixing new tela casino functionality and add related games traduction

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -345,7 +345,8 @@
         "virtuais": "Virtuals",
         "aoVivo": "Live Casino",
         "bingo": "Bingo",
-        "news": "News"
+        "news": "News",
+        "jogosRelacionados": "Related games"
     },
     "cartoes": {
         "titulo": "Cards",
