--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -347,7 +347,8 @@
         "virtuais": "Virtuais",
         "aoVivo": "Ao Vivo",
         "bingo": "Bingo",
-        "news": "Novidades"
+        "news": "Novidades",
+        "jogosRelacionados": "Jogos relacionados"
     },
     "cartoes": {
         "titulo": "Cartões",
