--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -657,5 +657,13 @@
         "concluida":"Terminado",
         "cancelada":"Cancelado",
         "premio": "Premio"
+    },
+    "cashback": {
+        "cashback": "Devolución de dinero",
+        "description": "Descripción",
+        "registrationDate": "Fecha de registro",
+        "pending": "Pendiente",
+        "redeemed": "Canjeado",
+        "redeem": "Canjear"
     }
 }
