--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -667,5 +667,13 @@
         "concluida":"Concluída",
         "cancelada":"Cancelada",
         "premio": "Prêmio"
+    },
+    "cashback": {
+        "cashback": "Cashback",
+        "description": "Descrição",
+        "registrationDate": "Data de Cadastro",
+        "pending": "Pendente",
+        "redeemed": "Resgatado",
+        "redeem": "Resgatar"
     }
 }
