--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -248,7 +248,8 @@
         "computadoEm": "Computed in:",
         "alteracoesSucesso": "Changes made successfully!",
         "erroInesperado": "Something unexpected happened. Please try again later.",
-        "enderecoNaoEncontrado": "Address not found, please fill it in manually."
+        "enderecoNaoEncontrado": "Address not found, please fill it in manually.",
+        "resetarSenha": "Password reset"
     },
     "bet": {
         "sportsBetting": "Sports betting",
