--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -250,7 +250,8 @@
         "computadoEm": "Computado em:",
         "alteracoesSucesso": "Alterações realizadas com sucesso!",
         "erroInesperado": "Algo inesperado aconteceu. Tente novamente mais tarde.",
-        "enderecoNaoEncontrado": "Endereço não encontrado, por favor preencha manualmente."
+        "enderecoNaoEncontrado": "Endereço não encontrado, por favor preencha manualmente.",
+        "resetarSenha": "Resetar senha"
     },
     "bet": {
         "sportsBetting": "Apostas esportivas",
