--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -371,7 +371,11 @@
         "reenviaCodigoDeVerificacao": "Resend Verification Code",
         "informeSeuEmail": "Enter your email to receive the password reset link.",
         "solicitarCodigoRedefinicao": "Request reset code",
-        "digiteSuaSenha": "Type your password"
+        "digiteSuaSenha": "Type your password",
+        "minimumCharactersPassword": "Minimum 8 characters",
+        "lowercaseLetter": "Minimum of one lowercase letter",
+        "uppercaseLetter": "Minimum of one uppercase letter",
+        "specialChar": "Minimum of one special character (!, @, #, $, %, &, *)"
     },
     "saques": {
         "enterAmountWithdrawal": "Enter the amount for the withdrawal",
