--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -373,7 +373,11 @@
         "reenviaCodigoDeVerificacao": "Reenviar Código de Verificação",
         "informeSeuEmail": "Informe seu e-mail para receber o link de redefinição de senha.",
         "solicitarCodigoRedefinicao": "Solicitar código de redefinição",
-        "digiteSuaSenha": "Digite sua senha"
+        "digiteSuaSenha": "Digite sua senha",
+        "minimumCharactersPassword": "Mínimo de 8 caracteres",
+        "lowercaseLetter": "Mínimo de uma letra minúscula",
+        "uppercaseLetter": "Mínimo de uma letra maiúscula",
+        "specialChar": "Mínimo de um caractere especial (!, @, #, $, %, &, *)"
     },
     "saques": {
         "enterAmountWithdrawal": "Informe o valor para saque",
