--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -248,7 +248,9 @@
         "computadoEm": "Computed in:",
         "alteracoesSucesso": "Changes made successfully!",
         "erroInesperado": "Something unexpected happened. Please try again later.",
-        "enderecoNaoEncontrado": "Address not found, please fill it in manually."
+        "enderecoNaoEncontrado": "Address not found, please fill it in manually.",
+        "session_alert": "Session Alert",
+        "session_alert_message": "There is currently an active session on another device. To continue access, would you like to close the other session?"
     },
     "bet": {
         "sportsBetting": "Sports betting",
@@ -598,7 +600,9 @@
         "aceitar": "Accept",
         "entendi": "Got it",
         "salvar_alteracoes": "Save Changes",
-        "voltar": "Back"
+        "voltar": "Back",
+        "logout_continue_login": "Yes, I would like to close the session",
+        "remain_active_session": "No, keep the other session active"
     },
     "conta": {
         "recuperarMinhaConta": "Recover my account!",
