--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -244,7 +244,9 @@
         "computadoEm": "Calculado en:",
         "alteracoesSucesso": "¡Cambios realizados con éxito!",
         "erroInesperado": "Algo inesperado ocurrió. Inténtalo de nuevo más tarde.",
-        "enderecoNaoEncontrado": "Dirección no encontrada, por favor complétala manualmente."
+        "enderecoNaoEncontrado": "Dirección no encontrada, por favor complétala manualmente.",
+        "session_alert": "Alerta de Sesión",
+        "session_alert_message": "Actualmente hay una sesión activa en otro dispositivo. Para continuar con el acceso, ¿desea cerrar la otra sesión?"
     },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
@@ -590,7 +592,9 @@
         "aceitar": "Aceptar",
         "entendi": "Lo tengo",
         "salvar_alteracoes": "Guardar Cambios",
-        "voltar": "Volver"
+        "voltar": "Volver",
+        "logout_continue_login": "Sí, me gustaría cerrar la sesión.",
+        "remain_active_session": "No, seguir con la otra sesión activa"
     },
     "conta": {
         "recuperarMinhaConta": "Recuperar mi cuenta!",
